--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -6,14 +6,14 @@
 
 header{
   width: 100%;
-  height: 80px;
+  height: 100px;
   border: 1px solid black;
 }
 
 .header-left, .header-right{
   float: left;
   text-align: center;
-  line-height: 80px;
+  line-height: 100px;
 }
 
 .header-left{
@@ -23,6 +23,7 @@ text-transform: uppercase;
 }
 .header-right{
 width: 60%;
+padding-left: 50px;
 }
 
 .left-navbar div, .right-navbar div{
@@ -35,6 +36,13 @@ width: 60%;
 a{
   text-decoration: none;
   color: rgb(160, 166, 173);
+}
+
+.pink a{
+  padding: 15px 25px;
+  border-radius: 40px;
+  color: white;
+  background-color: rgb(235, 0, 141);
 }
 
 
