--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -8,34 +8,20 @@ header{
   width: 100%;
   height: 100px;
   border: 1px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: auto;
 }
 
 .header-left, .header-right{
-  float: left;
-  text-align: center;
-  line-height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
-
-.header-left{
-width: 40%;
-text-align: left;
-text-transform: uppercase;
+div a {
+list-style: none;  
 }
-.header-right{
-width: 60%;
-padding-left: 50px;
-}
-
-.left-navbar div, .right-navbar div{
-  display: inline-block;
-  list-style: none;
-  margin: 0 15px;
-}
-
-.drop-container-i, .drop-element-i{
-  display: inline-block;
-}
-
 
 a{
   text-decoration: none;
@@ -47,25 +33,4 @@ a{
   border-radius: 40px;
   color: white;
   background-color: rgb(235, 0, 141);
-}
-
-
-
-header::after{
-  clear: both;
-  content: "";
-  display: table;
-}
-
-a:hover{
-  color: black;
-}
-
-div.drop-container-i{
-  display: flex;
-  flex-direction: column;
-}
-div.drop-element-i{
-  display: flex;
-  flex-direction: column;
 }
