--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -32,14 +32,20 @@ margin: 0 15px;
 a{
   text-decoration: none;
   color: rgb(160, 166, 173);
+  text-align: center;
+  vertical-align: middle;
 }
 
+
 .pink a{
+  color: white;
+  position: relative;
+  top: 25px;
   padding: 15px 25px;
   border-radius: 40px;
   color: white;
   background-color: rgb(235, 0, 141);
-  margin-top:
+  text-align: center;
 }
 a:hover{
   color: black;
