--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -54,9 +54,12 @@ a:hover{
 .drop-container-i{
   display: flex;
   flex-direction: column;
-
 }
 .drop-element-i{
   display: flex;
   flex-direction: column;
+  position: relative;
+  top: 70px;
+
 }
+.
