--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -39,8 +39,6 @@ a{
 
 .pink a{
   color: white;
-  position: relative;
-  top: 25px;
   padding: 15px 25px;
   border-radius: 40px;
   color: white;
@@ -53,17 +51,18 @@ a:hover{
 .nav-element{
   display: flex;
   flex-direction: column;
-}
+  text-align: center;
+  }
 
 .drop-container-i{
   display: flex;
   flex-direction: column;
+  
 }
 .drop-element-i{
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  top: 70px;
+
+  position: absolute;
+
 
 }
 .
