--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -12,6 +12,7 @@ header{
   justify-content: space-between;
   align-items: center;
   margin: auto;
+
 }
 
 .header-left, .header-right{
@@ -57,12 +58,20 @@ a:hover{
 .drop-container-i{
   display: flex;
   flex-direction: column;
-  
-}
+
+
+  }
 .drop-element-i{
 
-  position: absolute;
 
+
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    top: 100px;
+    display: none;
 
 }
 .
