--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -53,11 +53,14 @@ a:hover{
   display: flex;
   flex-direction: column;
   text-align: center;
+  position: relative;
   }
 
 .drop-container-i{
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 100px;
 
 
   }
@@ -65,12 +68,11 @@ a:hover{
 
 
 
-    position: absolute;
+
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    top: 100px;
+    
     display: none;
 
 }
