--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -60,20 +60,17 @@ a:hover{
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 100px;
+  top: 70px;
 
 
   }
 .drop-element-i{
 
-
-
-
+    width: 100px;
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    
     display: none;
+    border: 1px solid black;
 
 }
-.
