--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -66,11 +66,24 @@ a:hover{
   }
 .drop-element-i{
 
-    width: 100px;
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     display: none;
     border: 1px solid black;
+    text-align: left;
+    z-index: 1
+
+}
+.drop-element-i div{
+    width: 100px;
+    padding:  20px;
+    text-align: left;
+    margin-bottom: 10px;
+
+}
+.drop-element-i:hover{
+
+    background-color: rgba(1, 1, 0, 0.72);
 
 }
