--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -23,7 +23,7 @@ i.fa-caret-left{
 
 .navbar{
 
-  width: 1100px;
+  width: 1250px;
   height: 100px;
   margin: auto;
   display: flex;
@@ -51,12 +51,12 @@ align-items: center;
   position: relative;
   display: flex;
   margin-left: 20px;
-  color:  #DCDCDD;
+
 }
 
 .drop-container-i{
 position: absolute;
-top: 100px;
+top: 70px;
 right: 5px;
 width: 180px;
 background-color: rgba(0, 0, 0, 0.15);
@@ -70,12 +70,16 @@ border-radius: 7px;
 position: absolute;
 display: none;
 background-color: rgba(0, 0, 0, 0.15);
-left: calc(-110%);
+left: calc(-111%);
 top: 70px;
 width: 200px;
 height: 150px;
 text-align: center;
 box-shadow: 20px 20px 20px lightgrey;
+}
+#crypto {
+position: absolute;
+top: 210px;
 }
 
 .drop-element-i, .drop-element-ii{
@@ -84,9 +88,21 @@ padding: 0 15px 0 0;
 }
 
 a{
+
   text-decoration: none;
-  color: #DCDCDD;
+  color: black;
 }
+
+.nav-element > h2{
+
+  color: rgb(160, 166, 173):
+}
+
+h2:hover {
+
+  color: rgb(160, 166, 173):
+}
+
 .pink a{
   color: white;
   padding: 15px 25px;
@@ -94,4 +110,5 @@ a{
   color: white;
   background-color: rgb(235, 0, 141);
   text-align: center;
+
 }
